[gd_scene load_steps=2 format=3 uid="uid://cueqqi8r12cud"]

[ext_resource type="Script" path="res://search_option_button.gd" id="1_3nwdo"]

[node name="SearchOptionButton" type="Control"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1720.0
offset_bottom = -1050.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3nwdo")

[node name="PopupPanel" type="PopupPanel" parent="."]
position = Vector2i(0, 30)
size = Vector2i(200, 200)

[node name="Box" type="VBoxContainer" parent="PopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2

[node name="Search" type="LineEdit" parent="PopupPanel/Box"]
layout_mode = 2
placeholder_text = "Search"

[node name="Scroll" type="ScrollContainer" parent="PopupPanel/Box"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonBox" type="VBoxContainer" parent="PopupPanel/Box/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="MainButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
toggle_mode = true

[connection signal="text_changed" from="PopupPanel/Box/Search" to="." method="_on_search_text_changed"]
[connection signal="toggled" from="MainButton" to="." method="_on_button_toggled"]
